# RandyGPT

./: Cargo.toml  Cross.md  Cross.toml  METAL.md  RandyGPT.toml  build.rs  dist-workspace.toml
.github/workflows/: cross-matrix.yml  examples.yml  linux-matrix.yml  macos-matrix.yml  release.yml  rust.yml
examples/: basic.rs  hf_bert_inference.rs  hf_qwen_inference.rs
scripts/: build-linux.sh  download_and_run_models.sh  run-macos-intel.sh  run.sh
src/: RandyGPT.toml  checkpoint.rs  cli.rs  config.rs  forward.rs  main.rs  metal.rs  model.rs  optimizer.rs  serve.rs  tokenizer.rs  train.rs
tests/accelerate/: Cargo.toml
tests/accelerate/src/: main.rs
