[package]
name = "randygpt"
version = "0.9.3"
edition = "2021"
authors = []
description = ""
homepage = "https://github.com/MonumentalSystems/RandyGPT"
repository = "https://github.com/MonumentalSystems/RandyGPT"
license = ""
license-file = ""
default-run = "randygpt"

[features]
# Model size presets — select with: cargo build --release --features model-s
# Default (no feature) = model-xs: 116-dim, 4-head, 3-layer, ~0.86M params
model-xs = []   # 116-dim, 4-head, 3-layer,  ~0.86M params  ← default
model-s  = []   # 128-dim, 4-head, 8-layer,  ~1.6M params
model-ds = []   # 128-dim, 4-head, 12-layer, ~2.78M params — deep-s (more layers, same width)
model-m  = []   # 192-dim, 6-head, 6-layer,  ~2.7M params, ~1100ms/iter
model-l  = []   # 256-dim, 8-head, 6-layer,  ~4.82M params, ~1835ms/iter
model-deep = [] # 192-dim, 6-head, 16-layer, ~7.5M params — depth experiment
model-xl = []   # 384-dim, 8-head, 8-layer,  ~10.8M params, ~4000ms/iter

[dependencies]
candle-nn = "0.9.2"
ctrlc-tiny = "1.0.0"
lazy_static = "1.5.0"
rand = "0.9.2"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

# Metal GPU acceleration on macOS only
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.2", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.9.2" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
