[package]
name = "randygpt"
version = "0.9.3"
edition = "2021"
authors = []
description = ""
homepage = "https://github.com/MonumentalSystems/RandyGPT"
repository = "https://github.com/MonumentalSystems/RandyGPT"
license = ""
#license-file = ""
default-run = "randygpt"

[features]
# Model size presets — select with: cargo build --release --features model-s
# Default (no feature) = model-l: 256-dim, 8-head, 6-layer, ~4.82M params
# Reference src/config.rs
model-xs = []
model-s  = []
model-ds  = []
model-m  = []
model-deep = []
model-xl = []
model-l = []

[dependencies]
candle-nn = "0.9.2"
ctrlc-tiny = "1.0.0"
lazy_static = "1.5.0"
rand = "0.9.2" ## align with candle
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12.0"

[target.'x86_64-apple-darwin'.dependencies]
candle-core = { version = "0.9.2", features = ["metal"] }

[target.'aarch64-apple-darwin'.dependencies]
candle-core = { version = "0.9.2", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.9.2" }

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[build-dependencies]
cc = "1.2.57" ## align with candle
