[package]
name = "randygpt"
version = "0.9.3"
edition = "2021"
authors = []
description = ""
homepage = "https://github.com/MonumentalSystems/RandyGPT"
repository = "https://github.com/MonumentalSystems/RandyGPT"
license = ""
#license-file = ""
default-run = "randygpt"

[features]
# Model size presets — select with: cargo build --release --features model-s
# Default (no feature) = model-l: 256-dim, 8-head, 6-layer, ~4.82M params
# Reference src/config.rs
model-xs = []
model-s  = []
model-ds  = []
model-m  = []
model-deep = []
model-xl = []
model-l = []

[dependencies]
anyhow = "1.0"
candle-core = { version = "0.9.2", path = "candle/candle-core", features = ["metal"] }
candle-nn = { version = "0.9.2", path = "candle/candle-nn", features = ["metal"] }

candle-transformers = "0.9.2"
ctrlc-tiny = "1.0.0"
lazy_static = "1.5.0"
rand = "0.9.2" ## align with candle
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12.0"
tokenizers = "0.21.0"

[target.'aarch64-apple-darwin'.dependencies]
#candle-core = { version = "0.9.2", features = ["metal"] }
candle-core = { version = "0.9.2", path = "candle/candle-core", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
#candle-core = { version = "0.9.2" }
candle-core = { version = "0.9.2", path = "candle/candle-core", features = ["metal"] }

# Optional: Enable these for extra speed on specific CPUs
# candle-core = { version = "0.8.2", features = ["mkl"] } # For Intel/AMD
# candle-core = { version = "0.8.2", features = ["accelerate"] } # For Apple Silicon

[target.'x86_64-apple-darwin'.dependencies]
#candle-core = { version = "0.9.2", features = ["metal"] }
candle-core = { version = "0.9.2", path = "candle/candle-core", features = ["metal"] }

[build-dependencies]
cc = "1.2.57" ## align with candle

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
